# image2video-opencv

./: CMakeLists.txt  README.md
src/: image2video.cpp
